--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'groovy'
+
+sourceCompatibility = 1.8
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -19,6 +23,7 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
+	compile 'org.codehaus.groovy:groovy-all:2.4.7'
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
 
@@ -27,4 +32,5 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+	testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
 }
