--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,14 @@ hs_err_pid*
 /.project
 /build/
 /.gradle/
+/bin/
+.idea/compiler.xml
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
+.idea/modules/Recolonize_main.iml
+.idea/modules/Recolonize_test.iml
+.idea/scala_compiler.xml
+.idea/vcs.xml
+.idea/workspace.xml
+Recolonize.eml
