--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
+apply plugin: 'scala'
 
 sourceCompatibility = 1.8
 
@@ -26,7 +27,9 @@ dependencies {
 	compile 'org.codehaus.groovy:groovy-all:2.4.7'
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
-
+	// https://mvnrepository.com/artifact/org.scala-lang/scala-library
+	compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.0'
+	
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
