added xp curve functionality:
added thousand xp/level curve
added cube xp curve(like pokemon's "normal" curve)

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'scala'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
