added xp curve functionality:
added thousand xp/level curve
added cube xp curve(like pokemon's "normal" curve)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: java
+language: scala
+
+scala:
+   - 2.11.2
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
