--- a/.travis.yml
+++ b/.travis.yml
@@ -16,17 +16,17 @@ jdk:
 
 sudo: required
 
-#before_install:
-#- npm install gulp gulp-mocha gulp-util chai
-#- sudo apt-get update
-#- sudo apt-get install scala
+before_install:
+- npm install gulp gulp-mocha gulp-util chai
+- sudo apt-get update
+- sudo apt-get install scala
 #script: "gradle build"
 
 addons:
   apt:
     packages:
       - oracle-java8-installer
-      - scala
+#      - scala
 
 script: "gradle build"
 
