--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
-apply plugin: 'scala'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'idea'
@@ -18,10 +17,15 @@ sourceCompatibility = 1.8
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
-sourceSets.main.scala.srcDir "src/main/java"
 sourceSets.main.java.srcDirs = []
+sourceSets.main.groovy.srcDirs += ["src/main/java"]
+
+//sourceSets.test.java.srcDirs = []
+//sourceSets.test.groovy.srcDirs += ["src/main/java"]
+
 jar {
     manifest {
         attributes 'Main-Class': 'application.Main'
@@ -31,8 +35,7 @@ jar {
 dependencies {
 	compile 'org.codehaus.groovy:groovy-all:2.4.7'
     compile 'org.slf4j:slf4j-api:1.7.21'
-
-	compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.0'
+    compile 'org.jetbrains:annotations:15.0'
 
     testCompile 'junit:junit:4.12'
 	testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
